Make dependency graph zoomable

--- a/views/index.erb
+++ b/views/index.erb
@@ -7,7 +7,7 @@
   <body>
     <h1>Token Sale Tasks</h1>
     <p>Click on a node to open its Trello card. "(XX,YY)" = Assignees' initials.</p>
-    <iframe src="/diagram.svg"></iframe>
+    <img src="/diagram.svg"></img>
     <ul>
       <li style="color: red;">Backlog</li>
       <li style="color: orange;">Doing</li>
